# splitsilly

./: .gitignore  .pre-commit-config.yaml  manage.py  pyproject.toml  template.env
groups/: admin.py  api.py  forms.py  models.py  tasks.py  urls.py  views.py
groups/migrations/: 0001_initial.py  0002_expense_name.py  0003_expense_is_settle_up.py  0004_alter_expensegroupuser_unique_together_and_more.py  0005_expensesplit_adjustment_alter_expense_type.py  0006_expensegroupinvite.py  0007_expense_exchange_rate.py  0008_expense_currency_symbol.py  0009_expensesplit_shares_expr.py  0010_expense_note_alter_expensegroupinvite_consumed_by.py
groups/templates/: base.html
groups/templates/email/: group_invite.html  group_invite.txt  group_invite_consumed.html  group_invite_consumed.txt
groups/templates/groups/: create.html  expense_confirm_delete.html  expense_detail.html  expense_form.html  group_home.html  home.html  invite_detail.html  invite_form.html  invite_invalid.html  settings.html  settle_up.html
groups/templates/groups/widgets/: split_widget.html
groups/templatetags/: money.py
groups/tests/: conftest.py  test_debt_calculation.py  test_expense_notes.py  test_simplify_debts.py
identity/: forms.py  middleware.py  models.py  urls.py  views.py
identity/migrations/: 0001_initial.py  0002_alter_user_username.py  0003_user_timezone.py
identity/templates/identity/: settings.html
identity/templates/registration/: login.html  signup.html  signup_disallowed.html
scripts/: runserver
splitsilly/: asgi.py  settings.py  urls.py  wsgi.py
splitsilly/static/: expr.js
splitsilly/utils/: expr.py  lock.py
splitsilly/utils/tests/: test_expr.py
