[tool.poetry]
name = "splitsilly"
version = "0.1.0"
description = ""
authors = ["Patrick Gingras <775.pg.12@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.7"
django-extensions = "^3.2.3"
ipython = "^8.17.2"
python-dotenv = "^1.0.0"
gunicorn = "^21.2.0"
sentry-sdk = {extras = ["django"], version = "^1.40.0"}


[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
pytest = "^7.4.3"
pytest-django = "^4.7.0"
isort = "^5.12.0"
pre-commit = "^3.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "splitsilly.settings"

[tool.isort]
profile = "black"
