[project]
name = "splitsilly"
version = "0.1.0"
description = ""
authors = [{ name = "Patrick Gingras", email = "775.pg.12@gmail.com" }]
requires-python = ">=3.11,<3.14"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "django>=4.2.7,<5",
    "django-extensions>=3.2.3,<4",
    "ipython>=8.17.2,<9",
    "python-dotenv>=1.0.0,<2",
    "gunicorn>=21.2.0,<22",
    "sentry-sdk[django]>=1.40.0,<2",
    "ddtrace>=2.6.0,<3",
    "django-timezone-field>=6.1.0,<7",
    "yarl>=1.9.4,<2",
    "huey>=2.5.0,<3",
]

[dependency-groups]
dev = [
    "black>=23.11.0,<24",
    "pytest>=7.4.3,<8",
    "pytest-django>=4.7.0,<5",
    "isort>=5.12.0,<6",
    "pre-commit>=3.5.0,<4",
]

[tool.uv]

[tool.uv.build-backend]
module-root = ""

[build-system]
requires = ["uv_build>=0.9.4,<0.10.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "splitsilly.settings"

[tool.isort]
profile = "black"
